--- a/Wordfast TXML/Sdl - Backup.Community.FileTypeSupport.TXML.csproj
+++ b/Wordfast TXML/Sdl - Backup.Community.FileTypeSupport.TXML.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net48</TargetFramework>
+		<TargetFramework>net8.0-windows</TargetFramework>
 		<TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-		<UseWPF>true</UseWPF>
 
 		<OutputType>Library</OutputType>
 		<AssemblyName>Sdl.Community.FileType.TXML</AssemblyName>
@@ -52,7 +51,7 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
-	<PackageReference Include="Sdl.Core.PluginFramework">
+		<PackageReference Include="Sdl.Core.PluginFramework">
 			<Version>2.1.0</Version>
 		</PackageReference>
 		<PackageReference Include="Sdl.Core.PluginFramework.Build">
@@ -61,16 +60,11 @@
 		<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	</ItemGroup>
 	<ItemGroup>
-		    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
 		<Reference Include="Sdl.Core.Globalization">
 			<HintPath>$(TradosFolder)\Sdl.Core.Globalization.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Settings">
 			<HintPath>$(TradosFolder)\Sdl.Core.Settings.dll</HintPath>
-		</Reference>
-		<Reference Include="Sdl.Desktop.Platform.Styles">
-			<HintPath>$(TradosFolder)\Sdl.Desktop.Platform.Styles.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.FileTypeSupport.Framework.Core">
 			<HintPath>$(TradosFolder)\Sdl.FileTypeSupport.Framework.Core.dll</HintPath>
@@ -84,18 +78,14 @@
 		<Reference Include="Sdl.TellMe.ProviderApi">
 			<HintPath>$(TradosFolder)\Sdl.TellMe.ProviderApi.dll</HintPath>
 		</Reference>
-	</ItemGroup>
-	<ItemGroup>
-		<Compile Update="PluginResources.Designer.cs">
-			<DesignTime>True</DesignTime>
-			<AutoGen>True</AutoGen>
-			<DependentUpon>PluginResources.resx</DependentUpon>
-		</Compile>
-	</ItemGroup>
-	<ItemGroup>
-		<EmbeddedResource Update="PluginResources.resx">
-			<Generator>PublicResXFileCodeGenerator</Generator>
-			<LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
-		</EmbeddedResource>
+		<Reference Include="System" />
+		<Reference Include="System.Core" />
+		<Reference Include="System.Drawing" />
+		<Reference Include="System.Windows.Forms" />
+		<Reference Include="System.Xml.Linq" />
+		<Reference Include="System.Data.DataSetExtensions" />
+		<Reference Include="System.Data" />
+		<Reference Include="System.Xml" />
+		<Reference Include="WindowsBase" />
 	</ItemGroup>
 </Project>
