Tell me file types: txml mxliff tmx (#1560)
* SDLCOM-5835 Wordfast TXML: Tell Me

* SDLCOM-5835 Fix Path

* SDLCOM-5704 MXLIFF File Type: Tell Me

* SDLCOM-5697 File type for TMX: Tell Me

--- a/Wordfast TXML/Sdl.Community.FileTypeSupport.TXML.csproj
+++ b/Wordfast TXML/Sdl.Community.FileTypeSupport.TXML.csproj
@@ -41,9 +41,13 @@
 		<SignAssembly>true</SignAssembly>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="Resources\Information.png" />
+	</ItemGroup>
+	<ItemGroup>
 		<Content Include="pluginpackage.manifest.xml" />
 		<Resource Include="Resources\Download.ico" />
 		<Resource Include="Resources\ForumIcon.ico" />
+		<Resource Include="Resources\Information.png" />
 		<Resource Include="Resources\Question.ico" />
 	</ItemGroup>
 	<ItemGroup>
