SDLCOM-5787 OMEGA TM Lifting SDLCOM-5719 TM Lifting: Tell Me

--- a/TMLifting/Sdl.Community.TMLifting/Properties/launchSettings.json
+++ b/TMLifting/Sdl.Community.TMLifting/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "Profile 1": {
+    "TS24Beta": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files (x86)\\Trados\\Trados Studio\\Studio17\\SDLTradosStudio.exe"
+      "executablePath": "C:\\Program Files (x86)\\Trados\\Trados Studio\\Studio18Beta\\SDLTradosStudio.exe"
     }
   }
 }
