--- a/Legit/Sdl.Community.Legit/Sdl.Community.Legit.csproj
+++ b/Legit/Sdl.Community.Legit/Sdl.Community.Legit.csproj
@@ -78,6 +78,7 @@
     <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
+	  <LangVersion>latest</LangVersion>
     <CreatePluginPackage>true</CreatePluginPackage>
   </PropertyGroup>
   <ItemGroup>
